crates/config/tests/snapshots/project_init__project_init_generates_resource_defaults_with_prefixed_secondary_allocations.snap
---
source: crates/config/tests/project_init.rs
expression: "yaml_serde::to_string(&config)?"
---
php: latest
mailpit:
  version: latest
  env:
    MAIL_HOST: ${smtp_host}
    MAIL_MAILER: smtp
    MAIL_PORT: ${smtp_port}
mysql:
  version: latest
  allocations:
    analytics:
      env:
        ANALYTICS_DB_CONNECTION: mysql
        ANALYTICS_DB_DATABASE: ${database}
        ANALYTICS_DB_HOST: ${host}
        ANALYTICS_DB_PASSWORD: ${password}
        ANALYTICS_DB_PORT: ${port}
        ANALYTICS_DB_USERNAME: ${username}
    app:
      env:
        DB_CONNECTION: mysql
        DB_DATABASE: ${database}
        DB_HOST: ${host}
        DB_PASSWORD: ${password}
        DB_PORT: ${port}
        DB_USERNAME: ${username}
postgres:
  version: latest
  allocations:
    app:
      env:
        APP_DB_CONNECTION: pgsql
        APP_DB_DATABASE: ${database}
        APP_DB_HOST: ${host}
        APP_DB_PASSWORD: ${password}
        APP_DB_PORT: ${port}
        APP_DB_USERNAME: ${username}
redis:
  version: latest
  allocations:
    cache:
      env:
        REDIS_HOST: ${host}
        REDIS_PORT: ${port}
        REDIS_PREFIX: ${prefix}
    sessions:
      env:
        SESSIONS_REDIS_HOST: ${host}
        SESSIONS_REDIS_PORT: ${port}
        SESSIONS_REDIS_PREFIX: ${prefix}
rustfs:
  version: latest
  allocations:
    backups:
      env:
        BACKUPS_AWS_ACCESS_KEY_ID: ${access_key}
        BACKUPS_AWS_BUCKET: ${bucket}
        BACKUPS_AWS_ENDPOINT: ${endpoint}
        BACKUPS_AWS_SECRET_ACCESS_KEY: ${secret_key}
    uploads:
      env:
        AWS_ACCESS_KEY_ID: ${access_key}
        AWS_BUCKET: ${bucket}
        AWS_ENDPOINT: ${endpoint}
        AWS_SECRET_ACCESS_KEY: ${secret_key}
