crates/config/tests/snapshots/project_init__project_init_maps_only_clear_composer_php_constraints.snap
---
source: crates/config/tests/project_init.rs
expression: suggestions
---
[
    (
        "8.3",
        "8.3",
    ),
    (
        "^8.4",
        "8.4",
    ),
    (
        "~8.5.1",
        "8.5",
    ),
    (
        "8.4.*",
        "8.4",
    ),
    (
        ">=8.2",
        "latest",
    ),
    (
        "^8.3 || ^8.4",
        "latest",
    ),
    (
        "^8.2",
        "latest",
    ),
]
