crates/config/tests/snapshots/project_init__project_init_reports_detected_postgres_connection_value.snap
---
source: crates/config/tests/project_init.rs
expression: detections
---
[
    (
        "postgres",
        true,
        "Detected DB_CONNECTION=postgres",
    ),
    (
        "pgsql",
        true,
        "Detected DB_CONNECTION=pgsql",
    ),
]
